--- a/src/app/components/filtered-product-list-routing/filtered-product-list-routing.component.html
+++ b/src/app/components/filtered-product-list-routing/filtered-product-list-routing.component.html
@@ -1,11 +1,11 @@
 <mat-card>
-  <mat-card-title>Categories</mat-card-title>
+  <mat-card-title>Categories - filter by routing</mat-card-title>
   <mat-card-content>
-    <mat-action-list role="list" fxLayout="row">
-      <mat-list-item role="listitem" *ngFor="let item of categories$ | async" [routerLink] = "'/products/' + item">
-        {{item}}
-      </mat-list-item>
-    </mat-action-list>
+    <mat-selection-list role="list" fxLayout="row" [multiple]="false">
+      <mat-list-option role="listoption" *ngFor="let item of categories$ | async" [value]="item" [routerLink] = "'/products/' + item">
+      {{item}}
+      </mat-list-option>
+    </mat-selection-list>
   </mat-card-content>
 </mat-card>
 <mat-card>
