feat: add filtered employee list by age - using array of numbers

--- a/src/app/components/sorted-employee-list/sorted-employee-list.component.html
+++ b/src/app/components/sorted-employee-list/sorted-employee-list.component.html
@@ -9,6 +9,19 @@
   </mat-card-content>
 </mat-card>
 <mat-card>
+  <mat-card-title>Employees - filter by age</mat-card-title>
+  <mat-card-content>
+    <mat-selection-list role="list" fxLayout="row" [multiple]="false">
+      <mat-list-option role="listoption" *ngFor="let item of ageRanges | async" [value]="item" (click)="selectAgeRange(item)">
+        {{item}}
+      </mat-list-option>
+      <mat-list-option role="listoption" (click)="selectAgeRange(200)">
+        All
+      </mat-list-option>
+    </mat-selection-list>
+  </mat-card-content>
+</mat-card>
+<mat-card>
   <mat-card-title>Products</mat-card-title>
   <mat-card-content>
     <mat-list role="list">
