feat: add changing page functionality to beers list

--- a/src/app/components/filtered-beer-list/filtered-beer-list.component.html
+++ b/src/app/components/filtered-beer-list/filtered-beer-list.component.html
@@ -5,9 +5,8 @@
 </mat-list>
 <mat-paginator [length]="100"
                [pageSize]="10"
-               [pageSizeOptions]="pageSizeOptions"
+               [pageSizeOptions]="[5, 10, 25]"
                aria-label="Select page"
-               (page)="selectItemsPerPage($event.pageSize, $event.pageIndex)"
-
+               (page)="changeItemsView($event.pageSize, $event.pageIndex)"
 >
 </mat-paginator>
