--- a/src/app/components/filtered-beer-list/filtered-beer-list.component.html
+++ b/src/app/components/filtered-beer-list/filtered-beer-list.component.html
@@ -7,6 +7,6 @@
                [pageSize]="10"
                [pageSizeOptions]="[5, 10, 25]"
                aria-label="Select page"
-               (page)="changeItemsView($event.pageSize, $event.pageIndex)"
+               (page)="changeItemsView($event)"
 >
 </mat-paginator>
